--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -35,8 +35,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 
-<body class="font-manrope">
-    <header class="bg-gradient-to-b from-body_neutral to-white h-96">
+<body class="font-manrope text-secondary">
+    <header class="bg-gradient-to-b from-body_neutral to-white ">
+        <!-- navbar -->
         <nav class="w-11/12 mx-auto lg:pt-14 lg:mb-11 pt-8 mb-8">
             <div class="navbar">
                 <div class="navbar-start space-x-2">
@@ -71,19 +72,19 @@
                     <div class="flex items-center space-x-4">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor"
-                            class="size-6 bg-white rounded-full p-2 text-footer h-10 w-10 hidden md:block">
+                            class="cursor-pointer size-6 bg-white rounded-full p-2 text-footer h-10 w-10 hidden md:block">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
                         </svg>
 
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor"
-                            class="size-6 bg-white rounded-full p-2 text-footer h-10 w-10 hidden md:block">
+                            class="cursor-pointer size-6 bg-white rounded-full p-2 text-footer h-10 w-10 hidden md:block">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                         </svg>
 
-                        <a class=" text-xl font-extrabold bg-primary rounded-[32px] px-5 py-3 hidden md:block">Book
+                        <a class="btn h-14 text-xl font-extrabold bg-primary rounded-[32px] px-5 py-3 hidden md:block">Book
                             Consult <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                 stroke-width="1.5" stroke="currentColor"
                                 class="ml-2 size-6 bg-footer rounded-full p-2 text-white h-8 w-8 md:inline">
@@ -95,12 +96,7 @@
                     </div>
                     <div class="dropdown">
                         <div tabindex="0" role="button" class="lg:hidden">
-                            <!-- <svg xmlns="http://www.w3.org/2000/svg"
-                                class=" bg-white rounded-full p-2 text-footer h-10 w-10" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M4 6h16M4 12h8m-8 6h16" />
-                            </svg> -->
+
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                 class="bg-white rounded-full p-3  h-12 w-12 stroke-current text-accent border border-[#E9E9E9]">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -108,7 +104,7 @@
                             </svg>
                         </div>
                         <ul tabindex="0"
-                            class="menu menu-sm dropdown-content rounded-box z-[1] mt-3 w-52 p-2 shadow absolute right-0">
+                            class="menu menu-sm bg-white dropdown-content rounded-box z-[1] mt-3 w-52 p-2 shadow absolute right-0">
                             <li><a>Home</a></li>
                             <li><a>Services</a></li>
                             <li><a>Portfolio</a></li>
@@ -119,9 +115,112 @@
                 </div>
             </div>
         </nav>
+        <!-- banner -->
+        <div class="px-7 md:px-0 lg:w-9/12 mx-auto flex flex-col items-center">
+            <img class="h-[350px] w-[570px]" src="assets/banner.png" alt="">
+            <h1
+                class="text-[28px] lg:text-[64px] font-extrabold text-center text-secondary leading-tight my-4 md:mt-6 md:mb-8">
+                A barn house of this design has a striking appearance</h1>
+            <p class="text-sm md:text-base font-medium text-center text-body mb-8 md:w-4/5">The barn house captivates
+                with its blend of rustic charm and modern sophistication, featuring weathered
+                wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+            <a
+                class="btn bg-opacity-50 h-14 text-xl font-extrabold bg-primary rounded-[32px] px-5 py-3 mt-1 mb-10 lg:mb-[100px]">Book
+                Consult <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor"
+                    class="ml-2 size-6 bg-primary rounded-full p-2 text-secondary h-8 w-8 md:inline">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                </svg>
+            </a>
+        </div>
     </header>
-    <main>
+    <main class="bg-body_neutral">
+        <img src="assets/Vector.png" class="relative top-16 left-36 hidden lg:block" alt="">
+        <section class="py-8 lg:py-24 grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-9 mx-auto lg:w-9/12 w-10/12">
+            <div>
+                <div class="space-y-4 md:space-y-6">
+                    <div class="text-center md:text-start">
+                        <button class="btn h-10 min-h-0 font-bold bg-white rounded-3xl px-4 py-2"><svg
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                            </svg>
+                            About Us</button>
+                        <h2 class="text-[24px] md:text-[40px] font-bold mb-4 mt-4 md:mb-6 md:mt-4">We design thoughtful,
+                            liveable spaces</h2>
+                        <p class="text-sm md:text-base text-body font-medium">The barn house captivates with its blend
+                            of rustic charm and
+                            modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    </div>
+                    <div class="flex gap-5 md:gap-6 p-5 md:p-6 rounded-2xl bg-white">
+                        <div>
+                            <img src="assets/commercial.png" alt="">
+                        </div>
+                        <div class="space-y-[10px]">
+                            <h4 class="text-base md:text-xl font-extrabold text-body">Commercial</h4>
+                            <p class="font-medium text-accent">The barn house captivates with its blend of rustic charm
+                                and modern.</p>
+                        </div>
+                    </div>
+                    <div class="flex gap-5 md:gap-6 p-5 md:p-6 rounded-2xl bg-white">
+                        <div>
+                            <img src="assets/residential.png" alt="">
+                        </div>
+                        <div class="space-y-[10px]">
+                            <h4 class="text-base md:text-xl font-extrabold text-body">Residential</h4>
+                            <p class="font-medium text-accent">The barn house captivates with its blend of rustic charm
+                                and modern.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <img class="h-full" src="assets/Rectangle.png" alt="">
+            </div>
+        </section>
+        <section class="mx-auto lg:w-9/12 w-10/12 lg:pb-24">
+            <div class="text-center">
+                <button class="btn h-10 min-h-0 font-bold bg-white rounded-3xl px-4 py-2"><svg
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                    </svg>
+                    How we works</button>
+                <h2 class="text-[24px] md:text-[40px] font-bold mb-4 mt-4 md:mb-6 md:mt-4">Our Works Process</h2>
+                <p class="text-sm md:text-base text-body font-medium md:w-7/12 mx-auto">The barn house captivates with
+                    its blend of rustic charm and
+                    modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6 mt-6 md:mt-8">
+                <div class="space-y-[10px] p-6 rounded-2xl bg-[#E7C1D3]">
+                    <img src="assets/concept.png" alt="">
+                    <h4 class="text-xl font-extrabold text-footer">Concept</h4>
+                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
+                        and modern.</p>
+                </div>
+                <div class="space-y-[10px] p-6 rounded-2xl bg-[#EFDA6E]">
+                    <img src="assets/flow-chart.png" alt="">
+                    <h4 class="text-xl font-extrabold text-footer">Design Process</h4>
+                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
+                        and modern.</p>
+                </div>
+                <div class="space-y-[10px] p-6 rounded-2xl bg-[#A4DAC3]">
+                    <img src="assets/vision.png" alt="">
+                    <h4 class="text-xl font-extrabold text-footer">Supervision</h4>
+                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
+                        and modern.</p>
+                </div>
+                <div class="space-y-[10px] p-6 rounded-2xl bg-[#77AAEA]">
+                    <img src="assets/budget-planning.png" alt="">
+                    <h4 class="text-xl font-extrabold text-footer">Budget Planning</h4>
+                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
+                        and modern.</p>
+                </div>
 
+            </div>
+        </section>
     </main>
     <footer>
 
