--- a/index.html
+++ b/index.html
@@ -239,8 +239,20 @@
                     modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
         </section>
-        <section class="mx-auto lg:w-9/12 w-10/12 lg:py-24 bg-white">
-
+        <section class="mx-auto lg:w-9/12 w-10/12 lg:py-24 border-white border-8 bg-paper">
+            <div class="text-center">
+                <button class="btn h-10 min-h-0 font-bold bg-primary bg-opacity-20 rounded-3xl px-4 py-2 border-none"><svg
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                    </svg>
+                    Let’s Connect</button>
+                <h2 class="text-[24px] md:text-[40px] font-bold mb-4 mt-4 md:mb-6 md:mt-4">Let’s Discuss Next Project</h2>
+                <p class="text-sm md:text-base text-body font-medium md:w-7/12 mx-auto">The barn house captivates with
+                    its blend of rustic charm and
+                    modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
         </section>
     </main>
     <footer>
