connect section completed

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
         </section>
-        <section class="mx-auto lg:w-9/12 w-10/12 lg:py-24 border-white border-8 bg-paper">
+        <section class=" lg:py-24 border-white border-8 bg-paper bg-no-repeat bg-cover bg-center">
             <div class="text-center">
                 <button class="btn h-10 min-h-0 font-bold bg-primary bg-opacity-20 rounded-3xl px-4 py-2 border-none"><svg
                         xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -249,9 +249,16 @@
                     </svg>
                     Let’s Connect</button>
                 <h2 class="text-[24px] md:text-[40px] font-bold mb-4 mt-4 md:mb-6 md:mt-4">Let’s Discuss Next Project</h2>
-                <p class="text-sm md:text-base text-body font-medium md:w-7/12 mx-auto">The barn house captivates with
+                <p class="text-sm md:text-base text-body font-medium md:w-[45%] mx-auto mb-8">The barn house captivates with
                     its blend of rustic charm and
                     modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mx-auto lg:w-3/5 w-10/12">
+                <input class="rounded-[64px] p-5" placeholder="First Name*" type="text" name="" id="">
+                <input class="rounded-[64px] p-5" placeholder="Last Name*" type="text" name="" id="">
+                <input class="rounded-[64px] p-5" placeholder="Phone Number*" type="tel" name="" id="">
+                <input class="rounded-[64px] p-5" placeholder="Email Number*" type="email" name="" id="">
+                <textarea placeholder="Write your message here" class="col-span-2 rounded-[32px] p-5 bg-white resize-none" rows="10" name="" id=""></textarea>
             </div>
         </section>
     </main>
