--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
                         <path stroke-linecap="round" stroke-linejoin="round"
                             d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
                     </svg>
-
                     <a class="lg:text-[32px] text-[28px] font-extrabold text-secondary">Rinterio</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
@@ -182,7 +181,7 @@
                 <img class="h-full" src="assets/Rectangle.png" alt="">
             </div>
         </section>
-        <section class="mx-auto lg:w-9/12 w-10/12 lg:pb-24">
+        <section class="mx-auto lg:w-9/12 w-10/12 lg:pb-24 mb-8 md:mb-24">
             <div class="text-center">
                 <button class="btn h-10 min-h-0 font-bold bg-white rounded-3xl px-4 py-2"><svg
                         xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -224,7 +223,7 @@
 
             </div>
         </section>
-        <section class="mx-auto lg:w-9/12 w-10/12 lg:py-24 bg-white">
+        <section class="mx-auto lg:w-9/12 w-10/12 lg:py-24 bg-white mb-8 md:mb-24">
             <div class="text-center">
                 <button class="btn h-10 min-h-0 font-bold bg-primary bg-opacity-20 rounded-3xl px-4 py-2"><svg
                         xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -239,27 +238,40 @@
                     modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
         </section>
-        <section class=" lg:py-24 border-white border-8 bg-paper bg-no-repeat bg-cover bg-center">
+        <section class=" lg:py-24 py-8 border-white border-8 bg-paper bg-no-repeat bg-cover bg-center bg-opacity-50">
             <div class="text-center">
-                <button class="btn h-10 min-h-0 font-bold bg-primary bg-opacity-20 rounded-3xl px-4 py-2 border-none"><svg
+                <button
+                    class="btn h-10 min-h-0 font-bold bg-primary bg-opacity-20 rounded-3xl px-4 py-2 border-none"><svg
                         xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="size-6">
                         <path stroke-linecap="round" stroke-linejoin="round"
                             d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
                     </svg>
                     Let’s Connect</button>
-                <h2 class="text-[24px] md:text-[40px] font-bold mb-4 mt-4 md:mb-6 md:mt-4">Let’s Discuss Next Project</h2>
-                <p class="text-sm md:text-base text-body font-medium md:w-[45%] mx-auto mb-8">The barn house captivates with
+                <h2 class="text-[24px] md:text-[40px] font-bold mb-4 mt-4 md:mb-6 md:mt-4">Let’s Discuss Next Project
+                </h2>
+                <p class="text-sm md:text-base text-body font-medium md:w-[45%] mx-auto mb-8">The barn house captivates
+                    with
                     its blend of rustic charm and
                     modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mx-auto lg:w-3/5 w-10/12">
-                <input class="rounded-[64px] p-5" placeholder="First Name*" type="text" name="" id="">
-                <input class="rounded-[64px] p-5" placeholder="Last Name*" type="text" name="" id="">
-                <input class="rounded-[64px] p-5" placeholder="Phone Number*" type="tel" name="" id="">
-                <input class="rounded-[64px] p-5" placeholder="Email Number*" type="email" name="" id="">
-                <textarea placeholder="Write your message here" class="col-span-2 rounded-[32px] p-5 bg-white resize-none" rows="10" name="" id=""></textarea>
+                <input class="rounded-[64px] p-5 w-full" placeholder="First Name*" type="text" name="" id="">
+                <input class="rounded-[64px] p-5 w-full" placeholder="Last Name*" type="text" name="" id="">
+                <input class="rounded-[64px] p-5 w-full" placeholder="Phone Number*" type="tel" name="" id="">
+                <input class="rounded-[64px] p-5 w-full" placeholder="Email Number*" type="email" name="" id="">
+                <textarea placeholder="Write your message here" class="md:col-span-2 rounded-[32px] p-5 resize-none w-full"
+                    rows="10" name="" id=""></textarea>
+                <a class="btn h-14 text-xl font-extrabold bg-primary rounded-[32px] px-5 py-3 md:col-span-2 border-none">Send Mail<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor"
+                        class="ml-2 size-6 bg-footer rounded-full p-2 text-white h-8 w-8 md:inline">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                    </svg>
+
+                </a>
             </div>
+
         </section>
     </main>
     <footer>
