portfolio section completed

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </script>
     <!-- font awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.6.0/css/all.css" type="text/css">
 </head>
 
 <body class="font-manrope text-secondary">
@@ -74,14 +75,14 @@
                     <div class="flex items-center space-x-4">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor"
-                            class="cursor-pointer size-6 bg-white rounded-full p-2 text-footer h-10 w-10 hidden md:block">
+                            class="cursor-pointer size-6 bg-white rounded-full p-2 text-accent h-10 w-10 hidden md:block">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
                         </svg>
 
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor"
-                            class="cursor-pointer size-6 bg-white rounded-full p-2 text-footer h-10 w-10 hidden md:block">
+                            class="cursor-pointer size-6 bg-white rounded-full p-2 text-accent h-10 w-10 hidden md:block">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                         </svg>
@@ -127,8 +128,8 @@
                 with its blend of rustic charm and modern sophistication, featuring weathered
                 wood, sleek metal accents, and large windows that flood the space with natural light.</p>
             <a
-                class="btn bg-opacity-50 h-14 text-xl font-extrabold bg-primary rounded-[32px] px-5 py-3 mt-1 mb-10 lg:mb-[100px]">Book
-                Consult <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                class="btn bg-opacity-50 h-14 text-xl font-extrabold bg-primary rounded-[32px] px-5 py-3 mt-1 mb-10 lg:mb-[100px] border border-primary">View
+                Details <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                     stroke="currentColor"
                     class="ml-2 size-6 bg-primary rounded-full p-2 text-secondary h-8 w-8 md:inline">
                     <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
@@ -138,6 +139,7 @@
     </header>
     <main class="bg-body_neutral">
         <img src="assets/Vector.png" class="relative top-16 left-36 hidden lg:block" alt="">
+        <!-- about us section -->
         <section class="py-8 lg:py-24 grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-9 mx-auto lg:w-9/12 w-10/12">
             <div>
                 <div class="space-y-4 md:space-y-6">
@@ -155,7 +157,7 @@
                             of rustic charm and
                             modern sophistication, featuring weathered wood, sleek metal accents.</p>
                     </div>
-                    <div class="flex gap-5 md:gap-6 p-5 md:p-6 rounded-2xl bg-white">
+                    <div class="flex gap-5 md:gap-6 p-5 md:p-6 rounded-2xl bg-white lg:items-center">
                         <div>
                             <img src="assets/commercial.png" alt="">
                         </div>
@@ -165,7 +167,7 @@
                                 and modern.</p>
                         </div>
                     </div>
-                    <div class="flex gap-5 md:gap-6 p-5 md:p-6 rounded-2xl bg-white">
+                    <div class="flex gap-5 md:gap-6 p-5 md:p-6 rounded-2xl bg-white lg:items-center">
                         <div>
                             <img src="assets/residential.png" alt="">
                         </div>
@@ -223,8 +225,8 @@
 
             </div>
         </section>
-        <section class="mx-auto lg:w-9/12 w-10/12 lg:py-24 bg-white mb-8 md:mb-24">
-            <div class="text-center">
+        <section class="lg:py-24 lg:bg-white mb-8 md:mb-24">
+            <div class="mx-auto lg:w-9/12 w-10/12 text-center mb-4 md:mb-8">
                 <button class="btn h-10 min-h-0 font-bold bg-primary bg-opacity-20 rounded-3xl px-4 py-2"><svg
                         xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="size-6">
@@ -237,39 +239,106 @@
                     its blend of rustic charm and
                     modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
-        </section>
-        <section class=" lg:py-24 py-8 border-white border-8 bg-paper bg-no-repeat bg-cover bg-center bg-opacity-50">
-            <div class="text-center">
-                <button
-                    class="btn h-10 min-h-0 font-bold bg-primary bg-opacity-20 rounded-3xl px-4 py-2 border-none"><svg
-                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
-                    </svg>
-                    Let’s Connect</button>
-                <h2 class="text-[24px] md:text-[40px] font-bold mb-4 mt-4 md:mb-6 md:mt-4">Let’s Discuss Next Project
-                </h2>
-                <p class="text-sm md:text-base text-body font-medium md:w-[45%] mx-auto mb-8">The barn house captivates
-                    with
-                    its blend of rustic charm and
-                    modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <div class="mx-auto lg:w-8/12 w-10/12 grid grid-cols-1 md:grid-cols-12 gap-4 md:gap-6">
+                <div class="flex flex-col md:flex-row md:gap-6 p-6 border rounded-2xl md:col-span-8 bg-white">
+                    <div class="md:w-full md:h-full">
+                        <img class="w-full md:h-full" src="assets/img1.png" alt="">
+                    </div>
+                    <div>
+                        <h4 class="text-xl md:text-2xl font-extrabold text-body mt-4 md:mt-0">Commercial</h4>
+                        <p class="font-medium text-accent mb-5 mt-4">The barn house captivates with its blend of rustic
+                            charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                        <div>
+                            <a class="text-base md:text-xl font-extrabold bg-transparent">View
+                                Details <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor"
+                                    class="ml-2 size-6 bg-primary rounded-full p-2 text-secondary h-8 w-8 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-full h-full p-6 border rounded-2xl md:col-span-4 bg-white">
+                    <img class="w-full h-full" src="assets/img2.png" alt="">
+                </div>
+                <div class="w-full h-full p-6 border rounded-2xl md:col-span-3 bg-white">
+                    <img class="w-full h-full" src="assets/img3.png" alt="">
+                </div>
+                <div class="w-full h-full flex flex-col md:flex-row md:gap-6 p-6 border rounded-2xl md:col-span-6 bg-white">
+                    <div class="w-full h-full">
+                        <img class="w-full h-full" src="assets/img4.png" alt="">
+                    </div>
+                    <div>
+                        <h4 class="text-xl md:text-2xl font-extrabold text-body mt-4 md:mt-0">Commercial</h4>
+                        <p class="font-medium text-accent mb-5 mt-4">The barn house captivates with its blend of rustic
+                            charm and
+                            modern.</p>
+                        <div>
+                            <a class="text-base md:text-xl font-extrabold bg-transparent">View
+                                Details <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor"
+                                    class="ml-2 size-6 bg-primary rounded-full p-2 text-secondary h-8 w-8 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-full h-full p-6 border rounded-2xl md:col-span-3 bg-white lg:hidden">
+                    <img class="w-full h-full" src="assets/img3.png" alt="">
+                </div>
+                <div class="w-full h-full p-6 border rounded-2xl md:col-span-3 bg-white">
+                    <img class="w-full h-full" src="assets/img5.png" alt="">
+                </div>    
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mx-auto lg:w-3/5 w-10/12">
-                <input class="rounded-[64px] p-5 w-full" placeholder="First Name*" type="text" name="" id="">
-                <input class="rounded-[64px] p-5 w-full" placeholder="Last Name*" type="text" name="" id="">
-                <input class="rounded-[64px] p-5 w-full" placeholder="Phone Number*" type="tel" name="" id="">
-                <input class="rounded-[64px] p-5 w-full" placeholder="Email Number*" type="email" name="" id="">
-                <textarea placeholder="Write your message here" class="md:col-span-2 rounded-[32px] p-5 resize-none w-full"
-                    rows="10" name="" id=""></textarea>
-                <a class="btn h-14 text-xl font-extrabold bg-primary rounded-[32px] px-5 py-3 md:col-span-2 border-none">Send Mail<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor"
-                        class="ml-2 size-6 bg-footer rounded-full p-2 text-white h-8 w-8 md:inline">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
-                    </svg>
+        </section>
+        <section class="bg-paper bg-no-repeat bg-cover bg-center">
+            <div class="bg-white bg-opacity-40 lg:py-24 py-8 border-white border-4 md:border-8">
 
-                </a>
+                <div class="text-center">
+                    <button
+                        class="btn h-10 min-h-0 font-bold bg-primary bg-opacity-20 rounded-3xl px-4 py-2 border-none"><svg
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                        </svg>
+                        Let’s Connect</button>
+                    <h2 class="text-[24px] md:text-[40px] font-bold mb-4 mt-4 md:mb-6 md:mt-4">Let’s Discuss Next
+                        Project
+                    </h2>
+                    <p class="text-sm md:text-base text-body font-medium md:w-[45%] mx-auto mb-8">The barn house
+                        captivates
+                        with
+                        its blend of rustic charm and
+                        modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mx-auto lg:w-3/5 w-10/12">
+                    <input class="rounded-[64px] md:p-5 py-[17px] px-5 w-full border" placeholder="First Name*"
+                        type="text" name="" id="">
+                    <input class="rounded-[64px] md:p-5 py-[17px] px-5 w-full border" placeholder="Last Name*"
+                        type="text" name="" id="">
+                    <input class="rounded-[64px] md:p-5 py-[17px] px-5 w-full border" placeholder="Phone Number*"
+                        type="tel" name="" id="">
+                    <input class="rounded-[64px] md:p-5 py-[17px] px-5 w-full border" placeholder="Email Number*"
+                        type="email" name="" id="">
+                    <textarea placeholder="Write your message here"
+                        class="md:col-span-2 border rounded-[32px] p-5 resize-none w-full" rows="10" name=""
+                        id=""></textarea>
+                    <a
+                        class="btn h-14 text-xl font-extrabold bg-primary rounded-[32px] px-5 py-3 md:col-span-2 border-none">Send
+                        Mail<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor"
+                            class="ml-2 size-6 bg-footer rounded-full p-2 text-white h-8 w-8 md:inline">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                        </svg>
+
+                    </a>
+                </div>
             </div>
 
         </section>
