unique section completed

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                 <img class="h-full" src="assets/Rectangle.png" alt="">
             </div>
         </section>
+        <!-- Work Process -->
         <section class="mx-auto lg:w-9/12 w-10/12 lg:pb-24 mb-8 md:mb-24">
             <div class="text-center">
                 <button class="btn h-10 min-h-0 font-bold bg-white rounded-3xl px-4 py-2"><svg
@@ -266,7 +267,8 @@
                 <div class="w-full h-full p-6 border rounded-2xl md:col-span-3 bg-white">
                     <img class="w-full h-full" src="assets/img3.png" alt="">
                 </div>
-                <div class="w-full h-full flex flex-col md:flex-row md:gap-6 p-6 border rounded-2xl md:col-span-6 bg-white">
+                <div
+                    class="w-full h-full flex flex-col md:flex-row md:gap-6 p-6 border rounded-2xl md:col-span-6 bg-white">
                     <div class="w-full h-full">
                         <img class="w-full h-full" src="assets/img4.png" alt="">
                     </div>
@@ -292,7 +294,76 @@
                 </div>
                 <div class="w-full h-full p-6 border rounded-2xl md:col-span-3 bg-white">
                     <img class="w-full h-full" src="assets/img5.png" alt="">
-                </div>    
+                </div>
+            </div>
+        </section>
+        <!-- Unique Section -->
+        <section class="mx-auto lg:w-9/12 w-10/12 lg:pb-24 mb-8 md:mb-24">
+            <div class="text-center">
+                <button
+                    class="btn h-10 min-h-0 font-bold bg-primary bg-opacity-20 rounded-3xl px-4 py-2 border-none"><svg
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                    </svg>
+                    Our Amenities</button>
+                <h2 class="text-[24px] md:text-[40px] font-bold mb-4 mt-4 md:mb-6 md:mt-4">Project Amenities
+                </h2>
+                <p class="text-sm md:text-base text-body font-medium md:w-[45%] mx-auto mb-8">Detailed galleries with
+                    high-resolution images showcase a wide range of design styles, offering inspiration and ideas for
+                    various rooms and budgets. </p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6 mt-6 md:mt-8">
+                <div class="space-y-[10px] p-6 rounded-2xl border-2 bg-white hover:bg-primary hover:bg-opacity-20 duration-300 ease-in-out hover:shadow-2xl">
+                    <i class="fa-solid fa-square-parking text-4xl px-5 py-4 rounded-full"></i>
+                    <h4 class="text-xl font-extrabold text-footer">Parking Space</h4>
+                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
+                        and modern.</p>
+                </div>
+                <div class="space-y-[10px] p-6 rounded-2xl border-2 bg-white hover:bg-primary hover:bg-opacity-20 duration-300 ease-in-out hover:shadow-2xl">
+                    <i class="fa-solid fa-water-ladder text-4xl pl-4 pr-5 py-4 rounded-full"></i>
+                    <h4 class="text-xl font-extrabold text-footer">Swimming Pool</h4>
+                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
+                        and modern.</p>
+                </div>
+                <div class="space-y-[10px] p-6 rounded-2xl border-2 bg-white hover:bg-primary hover:bg-opacity-20 duration-300 ease-in-out hover:shadow-2xl">
+                    <i class="fa-solid fa-lock text-4xl px-6 py-4 rounded-full"></i>
+                    <h4 class="text-xl font-extrabold text-footer">Private Security</h4>
+                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
+                        and modern.</p>
+                </div>
+                <div class="space-y-[10px] p-6 rounded-2xl border-2 bg-white hover:bg-primary hover:bg-opacity-20 duration-300 ease-in-out hover:shadow-2xl">
+                    <i class="fa-solid fa-house-medical text-4xl px-5 py-4 rounded-full"></i>
+                    <h4 class="text-xl font-extrabold text-footer">Medical Center</h4>
+                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
+                        and modern.</p>
+                </div>
+                <div class="space-y-[10px] p-6 rounded-2xl border-2 bg-white hover:bg-primary hover:bg-opacity-20 duration-300 ease-in-out hover:shadow-2xl">
+                    <i class="fa-solid fa-book-bookmark text-4xl px-5 py-4 rounded-full"></i>
+                    <h4 class="text-xl font-extrabold text-footer">Library Area</h4>
+                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
+                        and modern.</p>
+                </div>
+                <div class="space-y-[10px] p-6 rounded-2xl border-2 bg-white hover:bg-primary hover:bg-opacity-20 duration-300 ease-in-out hover:shadow-2xl">
+                    <i class="fa-solid fa-bed text-4xl px-5 py-4 rounded-full"></i>
+                    <h4 class="text-xl font-extrabold text-footer">King Size beds</h4>
+                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
+                        and modern.</p>
+                </div>
+                <div class="space-y-[10px] p-6 rounded-2xl border-2 bg-white hover:bg-primary hover:bg-opacity-20 duration-300 ease-in-out hover:shadow-2xl">
+                    <i class="fa-solid fa-building-columns text-4xl px-5 py-4 rounded-full"></i>
+                    <h4 class="text-xl font-extrabold text-footer">Smart Homes</h4>
+                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
+                        and modern.</p>
+                </div>
+                <div class="space-y-[10px] p-6 rounded-2xl border-2 bg-white hover:bg-primary hover:bg-opacity-20 duration-300 ease-in-out hover:shadow-2xl">
+                    <i class="fa-solid fa-child-reaching text-4xl px-5 py-4 rounded-full"></i>
+                    <h4 class="text-xl font-extrabold text-footer">Kid's Playland</h4>
+                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
+                        and modern.</p>
+                </div>
+
             </div>
         </section>
         <section class="bg-paper bg-no-repeat bg-cover bg-center">
