--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-1">
                         <li><a
-                                class="text-accent hover:bg-transparent hover:text-body hover:font-extrabold duration-300 ease-in-out">Home</a>
+                                class="hover:bg-transparent text-body font-extrabold duration-300 ease-in-out">Home</a>
                         </li>
                         <li><a
                                 class="text-accent hover:bg-transparent hover:text-body hover:font-extrabold duration-300 ease-in-out">Services</a>
@@ -184,7 +184,7 @@
             </div>
         </section>
         <!-- Work Process -->
-        <section class="mx-auto lg:w-9/12 w-10/12 lg:pb-24 mb-8 md:mb-24">
+        <section class="mx-auto xl:w-9/12 w-10/12 mb-8 md:mb-24">
             <div class="text-center">
                 <button class="btn h-10 min-h-0 font-bold bg-white rounded-3xl px-4 py-2"><svg
                         xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -226,8 +226,9 @@
 
             </div>
         </section>
+        <!-- Challenge Section -->
         <section class="lg:py-24 lg:bg-white mb-8 md:mb-24">
-            <div class="mx-auto lg:w-9/12 w-10/12 text-center mb-4 md:mb-8">
+            <div class="mx-auto xl:w-9/12 w-10/12 lg:w-11/12 text-center mb-4 md:mb-8">
                 <button class="btn h-10 min-h-0 font-bold bg-primary bg-opacity-20 rounded-3xl px-4 py-2"><svg
                         xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="size-6">
@@ -289,7 +290,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="w-full h-full p-6 border rounded-2xl md:col-span-3 bg-white lg:hidden">
+                <div class="w-full h-full p-6 border rounded-2xl md:col-span-3 bg-white md:hidden">
                     <img class="w-full h-full" src="assets/img3.png" alt="">
                 </div>
                 <div class="w-full h-full p-6 border rounded-2xl md:col-span-3 bg-white">
@@ -298,7 +299,7 @@
             </div>
         </section>
         <!-- Unique Section -->
-        <section class="mx-auto lg:w-9/12 w-10/12 lg:pb-24 mb-8 md:mb-24">
+        <section class="mx-auto xl:w-9/12 w-10/12 lg:w-11/12 mb-8 md:mb-24">
             <div class="text-center">
                 <button
                     class="btn h-10 min-h-0 font-bold bg-primary bg-opacity-20 rounded-3xl px-4 py-2 border-none"><svg
@@ -310,7 +311,7 @@
                     Our Amenities</button>
                 <h2 class="text-[24px] md:text-[40px] font-bold mb-4 mt-4 md:mb-6 md:mt-4">Project Amenities
                 </h2>
-                <p class="text-sm md:text-base text-body font-medium md:w-[45%] mx-auto mb-8">Detailed galleries with
+                <p class="text-sm md:text-base text-body font-medium lg:w-2/3 mx-auto mb-8">Detailed galleries with
                     high-resolution images showcase a wide range of design styles, offering inspiration and ideas for
                     various rooms and budgets. </p>
             </div>
@@ -366,10 +367,11 @@
 
             </div>
         </section>
+        <!-- Connect Section -->
         <section class="bg-paper bg-no-repeat bg-cover bg-center">
             <div class="bg-white bg-opacity-40 lg:py-24 py-8 border-white border-4 md:border-8">
 
-                <div class="text-center">
+                <div class="text-center w-10/12 md:w-full mx-auto">
                     <button
                         class="btn h-10 min-h-0 font-bold bg-primary bg-opacity-20 rounded-3xl px-4 py-2 border-none"><svg
                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -378,10 +380,10 @@
                                 d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
                         </svg>
                         Let’s Connect</button>
-                    <h2 class="text-[24px] md:text-[40px] font-bold mb-4 mt-4 md:mb-6 md:mt-4">Let’s Discuss Next
+                    <h2 class="text-[24px] md:text-[40px] font-bold mb-4 mt-4 md:mb-6 md:mt-4 w-9/12 mx-auto">Let’s Discuss Next
                         Project
                     </h2>
-                    <p class="text-sm md:text-base text-body font-medium md:w-[45%] mx-auto mb-8">The barn house
+                    <p class="text-sm md:text-base text-body font-medium xl:w-[45%] lg:w-3/4 mx-auto mb-8">The barn house
                         captivates
                         with
                         its blend of rustic charm and
@@ -414,8 +416,50 @@
 
         </section>
     </main>
-    <footer>
+    <!-- Footer -->
+    <footer class="bg-footer">
+       <div class="py-[72px]    md:py-24 mx-auto lg:w-9/12 w-10/12">
+        <div class="space-x-2 flex items-center justify-center">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="size-6 bg-primary rounded-full p-2 text-footer h-8 w-8">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                    d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+            </svg>
+            <a class="lg:text-[32px] text-[28px] font-extrabold text-[#E9E9E9]">Rinterio</a>
+        </div>
+        <p class="md:w-7/12 mx-auto text-center text-accent mt-4 font-medium">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        <div class="flex justify-center my-8 md:my-12">
+            <ul class="menu flex flex-col md:flex-row xl:gap-24 gap-8 text-[#E9E9E9] items-center">
+                <li><a
+                        class="hover:font-extrabold duration-300 ease-in-out">Home</a>
+                </li>
+                <li><a
+                        class="hover:font-extrabold duration-300 ease-in-out">Services</a>
+                </li>
+                <li><a
+                        class="hover:font-extrabold duration-300 ease-in-out">Portfolio</a>
+                </li>
+                <li><a
+                        class="hover:font-extrabold duration-300 ease-in-out">Blogs</a>
+                </li>
+                <li><a
+                        class="hover:font-extrabold duration-300 ease-in-out">Contact
+                        Us</a></li>
+            </ul>
+        </div>
+       <div class="text-center">
+        <a class="btn h-14 text-xl font-extrabold bg-primary rounded-[32px] px-5 py-3 md:inline border-none">Book
+            Consult <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                stroke-width="1.5" stroke="currentColor"
+                class="ml-2 size-6 bg-footer rounded-full p-2 text-white h-8 w-8 md:inline">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                    d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+            </svg>
 
+        </a>
+   
+       </div>
+       </div>
     </footer>
 </body>
 
