--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
             <div class="mx-auto lg:w-8/12 w-10/12 grid grid-cols-1 md:grid-cols-12 gap-4 md:gap-6">
-                <div class="flex flex-col md:flex-row md:gap-6 p-6 border rounded-2xl md:col-span-8 bg-white">
+                <div class="flex flex-col md:flex-row md:gap-6 p-6 border rounded-2xl md:col-span-8 bg-white order-1 md:order-none">
                     <div class="md:w-full md:h-full">
                         <img class="w-full md:h-full" src="assets/img1.png" alt="">
                     </div>
@@ -262,14 +262,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="w-full h-full p-6 border rounded-2xl md:col-span-4 bg-white">
+                <div class="w-full h-full p-6 border rounded-2xl md:col-span-4 bg-white order-2 md:order-none">
                     <img class="w-full h-full" src="assets/img2.png" alt="">
                 </div>
-                <div class="w-full h-full p-6 border rounded-2xl md:col-span-3 bg-white">
+                <div class="w-full h-full p-6 border rounded-2xl md:col-span-3 bg-white order-5 md:order-none">
                     <img class="w-full h-full" src="assets/img3.png" alt="">
                 </div>
                 <div
-                    class="w-full h-full flex flex-col md:flex-row md:gap-6 p-6 border rounded-2xl md:col-span-6 bg-white">
+                    class="w-full h-full flex flex-col md:flex-row md:gap-6 p-6 border rounded-2xl md:col-span-6 bg-white order-4 md:order-none">
                     <div class="w-full h-full">
                         <img class="w-full h-full" src="assets/img4.png" alt="">
                     </div>
@@ -290,10 +290,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="w-full h-full p-6 border rounded-2xl md:col-span-3 bg-white md:hidden">
-                    <img class="w-full h-full" src="assets/img3.png" alt="">
+                <div class="w-full h-full p-6 border rounded-2xl md:col-span-3 bg-white md:hidden order-6 md:order-none">
+                    <img class="w-full h-full" src="assets/img5.png" alt="">
                 </div>
-                <div class="w-full h-full p-6 border rounded-2xl md:col-span-3 bg-white">
+                <div class="w-full h-full p-6 border rounded-2xl md:col-span-3 bg-white order-3 md:order-none">
                     <img class="w-full h-full" src="assets/img5.png" alt="">
                 </div>
             </div>
