--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                     <h2 class="text-[24px] md:text-[40px] font-bold mb-4 mt-4 md:mb-6 md:mt-4 w-9/12 mx-auto">Let’s Discuss Next
                         Project
                     </h2>
-                    <p class="text-sm md:text-base text-body font-medium xl:w-[45%] lg:w-3/4 mx-auto mb-8">The goal is to create an innovative and functional space that meets modern needs while enhancing lifestyle quality. Stay tuned as we dive into design and development.</p>
+                    <p class="text-sm md:text-base text-body font-medium xl:w-[45%] lg:w-3/4 mx-auto mb-8">The goal is to create an innovative and functional space that meets modern needs while enhancing lifestyle quality. Stay tuned as we dive into design.</p>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mx-auto lg:w-3/5 w-10/12">
                     <input class="rounded-[64px] md:p-5 py-[17px] px-5 w-full border" placeholder="First Name*"
