--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </svg>
                     <a class="lg:text-[32px] text-[28px] font-extrabold text-secondary">Rinterio</a>
                 </div>
-                <div class="navbar-center hidden lg:flex">
+                <div class="navbar-center hidden lg:flex xl:ml-36">
                     <ul class="menu menu-horizontal px-1">
                         <li><a
                                 class="hover:bg-transparent text-body font-extrabold duration-300 ease-in-out">Home</a>
@@ -71,7 +71,7 @@
                                 Us</a></li>
                     </ul>
                 </div>
-                <div class="navbar-end">
+                <div class="navbar-end w-full">
                     <div class="flex items-center space-x-4">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor"
