--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
     <header class="bg-gradient-to-b from-body_neutral to-white ">
         <!-- navbar -->
         <nav class="w-11/12 mx-auto lg:pt-14 lg:mb-11 pt-8 mb-8">
-            <div class="navbar">
+            <div class="navbar justify-between">
                 <div class="navbar-start space-x-2">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="size-6 bg-primary rounded-full p-2 text-footer h-8 w-8">
                         <path stroke-linecap="round" stroke-linejoin="round"
                             d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
                     </svg>
-                    <a class="lg:text-[32px] text-[28px] font-extrabold text-secondary">Rinterio</a>
+                    <a class="xl:text-[32px] text-[28px] font-extrabold text-secondary">Rinterio</a>
                 </div>
-                <div class="navbar-center hidden lg:flex xl:ml-36">
+                <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-1">
                         <li><a
                                 class="hover:bg-transparent text-body font-extrabold duration-300 ease-in-out">Home</a>
@@ -71,7 +71,7 @@
                                 Us</a></li>
                     </ul>
                 </div>
-                <div class="navbar-end w-full">
+                <div class="navbar-end lg:w-full xl:w-1/2">
                     <div class="flex items-center space-x-4">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor"
